2005-01-07  Paul Stevens <paul@nfg.nl>

	* debug.c: changed all usage of the my_ prefix to dm_ to avoid
	conflicts with the mysql namespace.
	* imapcommands.c (_ic_search): reverse the sub_search list.
	* imapcommands.c (_ic_search): fix possible race condition in retry
	loop.
	* db.c (db_search): return error if mailbox out-of-sync.

2005-01-06  Paul Stevens <paul@nfg.nl>

	* imaputil.c, dbmail-imapsession.c: some changes in bodystructure
	response construction.
	* sort.h (sort_and_deliver): removed redundant rfcsize argument.
	* main.c, pipe.c, lmtp.c, dbmail-message.c, dbmail-message.h,
	check_dbmail_common.c: unified read_whole_message functions.
	
2005-01-04  Paul Stevens <paul@nfg.nl>

	* Makefile.am, check_dbmail_common.c: added new test suite for testing
	db interactions.
	* check_dbmail_imapd.c, auth.h, auth/authsql.c, user.c: refactored
	auth_get_known_users to use GList.
	* dbmail-imapsession.c, imap4.c, imap4.h, imapcommands.c: misc
	cleanups in code formatting and string handling.
	* imaputil.c (dbmail_imap_list_slices): fix error in slice
	construction.
	* mime.c (mime_readheader): minor cleanups after refactoring.
	* server.c, serverchild.c: cleanup of trace calls. Also make
	serverchild.c sleep for 60 seconds on segfault to allow attachment of
	debugger.

2004-12-23  Paul Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, dbmail-imapsession.c, dbmail-imapsession.h,
	imaputil.c, imaputil.h, imapcommands,c: First attempt at unsetting 
	the recent flag on messages (closes #97).
	
2004-12-22  Paul Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, mime.c, rfcmsg.c, dbmail-message.c,
	dbmail-message.h: correctly handle both messages and messageparts as 
	parsed by mime_readheader.
	* mime.c (mime_readheader): removed redundant cruft after cleanup.
	
2004-12-21  Aaron Stone  <aaron@serendipity.cx>

	* dbmd5.c (makemd5): return NULL if passed NULL.
	* user.c (mkpassword): replaced two instances of strncat with